--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -45,24 +45,22 @@ jobs:
         id: tests
         run: hatch run cov
 
-      - name: Send event to Datadog for nightly failures
-        if: github.event_name == 'schedule' && failure() && steps.tests.conclusion == 'failure'
-        uses: ./.github/actions/send_failure
-        with:
-          title: "core-integrations nightly failure: ${{ github.workflow }}"
-          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
-
       - name: Nightly - run unit tests with Haystack main branch
-        if: always()
+        if: github.event_name == 'schedule'
         id: nightly-haystack-main
-        run: exit 1
-        # |
-        #   hatch run pip install git+https://github.com/deepset-ai/haystack.git
-        #   hatch run test -m "not integration"
-
-      - name: Send event to Datadog for nightly failures with Haystack main branch
-        if: failure()  && steps.nightly-haystack-main.conclusion == 'failure'
+        run: |
+          hatch run pip install git+https://github.com/deepset-ai/haystack.git
+          hatch run test -m "not integration"
+      
+      - name: Send event to Datadog for failures
+        if: failure() && github.event_name == 'schedule' (steps.tests.conclusion == 'failure' || steps.nightly-haystack-main.conclusion == 'failure')
         uses: ./.github/actions/send_failure
         with:
-          title: "core-integrations nightly failure with Haystack main branch: ${{ github.workflow }}"
-          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}                                   
+          title: |
+            ${{ if steps.nightly-tests.conclusion == 'failure' }}
+            core-integrations nightly failure with Haystack main branch
+            ${{ else }}
+            core-integrations nightly failure
+            ${{ endif }}
+            : ${{ github.workflow }}
+          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
