--- a/.github/workflows/CI_readme_sync.yml
+++ b/.github/workflows/CI_readme_sync.yml
@@ -16,13 +16,26 @@ env:
   TAG: ${{ inputs.tag || github.ref_name }}
 
 jobs:
+  get-versions:
+    runs-on: ubuntu-latest
+    outputs:
+      versions: ${{ steps.version_finder.outputs.versions }}
+    steps:
+      - name: Get Haystack Docs versions
+        id: version_finder
+        run: |
+          curl https://dash.readme.com/api/v1/version --header 'authorization: Basic ${{ secrets.README_API_KEY }}' > out
+          VERSIONS=$(jq '[ .[] | select(.version | startswith("2."))| .version ]' out)
+          echo "versions=$VERSIONS" >> "$GITHUB_OUTPUT"
+
   sync:
     runs-on: ubuntu-latest
+    needs: get-versions
     strategy:
       fail-fast: false
       max-parallel: 1
       matrix:
-        hs-docs-version: ['2.0', '2.1', '2.2-unstable']
+        hs-docs-version: ${{ needs.get-versions.outputs.versions }}
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
