--- a/.github/workflows/CI_readme_sync.yml
+++ b/.github/workflows/CI_readme_sync.yml
@@ -35,7 +35,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        hs-docs-version: ${{ needs.get-versions.outputs.versions }}
+        hs-docs-version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
