--- a/.github/workflows/CI_readme_sync.yml
+++ b/.github/workflows/CI_readme_sync.yml
@@ -30,7 +30,11 @@ jobs:
         run: |
           curl -s https://dash.readme.com/api/v1/version --header 'authorization: Basic ${{ secrets.README_API_KEY }}' > out
           VERSIONS=$(jq '[ .[] | select(.version | startswith("2."))| .version ]' out)
-          echo "versions=$VERSIONS" >> "$GITHUB_OUTPUT"
+          {
+            echo 'versions<<EOF'
+            echo $VERSIONS
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
 
   sync:
     runs-on: ubuntu-latest
