--- a/integrations/pgvector/pydoc/config.yml
+++ b/integrations/pgvector/pydoc/config.yml
@@ -3,6 +3,7 @@ loaders:
     search_path: [../src]
     modules: [
       "haystack_integrations.components.retrievers.pgvector.embedding_retriever",
+      "haystack_integrations.components.retrievers.pgvector.keyword_retriever",
       "haystack_integrations.document_stores.pgvector.document_store",
     ]
     ignore_when_discovered: ["__init__"]
