--- a/.github/workflows/CI_pypi_release.yml
+++ b/.github/workflows/CI_pypi_release.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.HAYSTACK_BOT_TOKEN }}
 
       - name: Install Hatch
         run: pip install hatch
@@ -54,11 +56,7 @@ jobs:
 
       - name: Commit changelog
         shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.HAYSTACK_BOT_TOKEN }}
         run: |
-          git config --global user.name "HaystackBot"
-          git config --global user.email "accounts@deepset.ai"
           git fetch
           git checkout main
           git add ${{ steps.pathfinder.outputs.project_path }}
