--- a/.github/workflows/CI_pypi_release.yml
+++ b/.github/workflows/CI_pypi_release.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.HAYSTACK_BOT_TOKEN }}
+          fetch-depth: 0
 
       - name: Install Hatch
         run: pip install hatch
