try skipping integration tests from forks

--- a/.github/workflows/amazon_bedrock.yml
+++ b/.github/workflows/amazon_bedrock.yml
@@ -62,7 +62,12 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
+      - name: Set IS_FORK environment variable
+        run: echo "IS_FORK=$([[ ${{ github.event.pull_request.head.repo.full_name }} != ${{ github.repository }} ]] && echo true || echo false)" >> $GITHUB_ENV
+
+
       - name: AWS authentication
+        if: env.IS_FORK == 'false'      
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
         with:
           aws-region: ${{ env.AWS_REGION }}
